# GatewayHub

./: .dockerignore  .env.example  .gitignore  GOAL.md  LICENSE  Makefile  PROGRESS.md  README.md  docker-compose.yml  setup.sh
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 016ecf2912ae_baseline.py  2fdf9a9f755d_add_tasks_table.py  31548f31a054_add_settings_table.py  5eb669c2a523_add_users_table.py  c14a440f8b8b_add_provider_list_id_to_tasks.py  d3290a38091b_add_provider_list_name_to_tasks.py  e88b152305a4_add_comments_table.py
backend/app/: bootstrap.py  config.py  crypto.py  db.py  main.py  poller.py  security.py  settings_store.py  sync.py
backend/app/api/: auth.py  settings.py  tasks.py  users.py
backend/app/models/: __init__.py  comment.py  setting.py  task.py  user.py
backend/providers/: base.py  clickup.py  rate_limit.py
backend/tests/: conftest.py  test_auth.py  test_auth_dependencies.py  test_bootstrap.py  test_clickup_client.py  test_clickup_mapping.py  test_clickup_provider.py  test_comment_model.py  test_crypto.py  test_db.py  test_health.py  test_poller.py  test_provider_base.py  test_rate_limit.py  test_security.py  test_setting_model.py  test_settings_api.py  test_settings_store.py  test_sync.py  test_task_detail_api.py  test_task_model.py  test_tasks_api.py  test_user_management.py  test_user_model.py  test_users_directory.py
docs/: INTEGRATIONS.md  PRD.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
worker/: main.py  (+1 more)
(+30 files in other folders)
