[project]
name = "gatewayhub-backend"
version = "0.1.0"
description = "GatewayHub backend (App Service)"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*.py" = ["I001", "F401"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "."
explicit_package_bases = true
exclude = ["alembic/versions/"]

[[tool.mypy.overrides]]
module = "alembic.env"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["app", "providers"]
